--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
           Download: (props) => <SvgIcon {...props}><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></SvgIcon>,
         };
         
-        // --- Componente de Erro de Autenticação ---
         const AuthConfigurationError = () => (
             <div className="flex items-center justify-center min-h-screen bg-gray-100">
                 <div className="max-w-2xl p-8 bg-white rounded-lg shadow-md text-center">
@@ -112,7 +111,6 @@
             </div>
         );
 
-        // --- Componente Principal ---
         const WorshipOrderControl = () => {
             const [currentPlan, setCurrentPlan] = useState({
                 id: 'new-plan-' + Date.now(),
@@ -262,6 +260,7 @@
                                 liveState={liveState}
                                 onStopLive={stopLive}
                                 role={role}
+                                liveDocRef={liveDocRef}
                             />
                         )}
                     </div>
@@ -539,6 +538,31 @@
         };
 
         const PresentationView = ({ liveState, onStopLive, role }) => {
+            const db = window.db;
+            const appId = window.appId;
+            const firestore = window.firestore;
+            const liveDocRef = db && firestore ? firestore.doc(db, "artifacts", appId, "public", "data", "worship-order", "live-state") : null;
+
+            const handleUpdateLiveState = (newLiveStateData) => {
+                if (role !== 'coordinator' || !liveDocRef) return;
+                window.firestore.setDoc(liveDocRef, { isLive: true, data: newLiveStateData });
+            };
+
+            useEffect(() => {
+                let interval;
+                if (liveState.isLive && liveState.data?.liveState.isRunning && role === 'coordinator') {
+                    interval = setInterval(() => {
+                        const currentData = liveState.data;
+                        const newLiveState = {
+                            ...currentData.liveState,
+                            currentTime: currentData.liveState.currentTime + 1
+                        };
+                        handleUpdateLiveState({ ...currentData, liveState: newLiveState });
+                    }, 1000);
+                }
+                return () => clearInterval(interval);
+            }, [liveState.isLive, liveState.data?.liveState.isRunning, liveState.data?.liveState.currentTime, role]);
+
             if (!liveState.isLive || !liveState.data) {
                 return (
                     <div className="text-center p-10 bg-white rounded-lg shadow-md">
@@ -581,6 +605,38 @@
                 }, 0);
                 return itemsBalance - initialDelayInMinutes;
             }, [items, currentItemIndex, actualStartTime, cultInfo.startTime]);
+
+            const handleToggleTimer = () => {
+                const newLiveState = { ...dataLiveState, isRunning: !isRunning };
+                if (!isRunning && currentItemIndex === 0 && !actualStartTime) {
+                    newLiveState.actualStartTime = new Date().toISOString();
+                }
+                handleUpdateLiveState({ ...liveState.data, liveState: newLiveState });
+            };
+
+            const handleResetTimer = () => {
+                handleUpdateLiveState({ ...liveState.data, liveState: { ...dataLiveState, currentTime: 0 } });
+            };
+
+            const handleNext = () => {
+                if (currentItemIndex >= items.length - 1) return;
+                const newItems = items.map((item, index) => 
+                    index === currentItemIndex ? { ...item, completed: true, actualDuration: currentTime } : item
+                );
+                handleUpdateLiveState({ 
+                    ...liveState.data, 
+                    items: newItems,
+                    liveState: { ...dataLiveState, currentItemIndex: currentItemIndex + 1, currentTime: 0, isRunning: true }
+                });
+            };
+
+            const handlePrevious = () => {
+                if (currentItemIndex <= 0) return;
+                handleUpdateLiveState({
+                    ...liveState.data,
+                    liveState: { ...dataLiveState, currentItemIndex: currentItemIndex - 1, currentTime: 0 }
+                });
+            };
             
             if (!currentItem) {
                 return <div className="text-center p-10 bg-white rounded-lg shadow-md"><h2 className="text-2xl font-bold">Culto Finalizado</h2></div>
@@ -608,7 +664,14 @@
                         </div>
                         {role === 'coordinator' && (
                             <div className="flex justify-center gap-4">
-                                <button onClick={onStopLive} className="bg-red-600 hover:bg-red-700 px-4 py-2 rounded-lg">Encerrar Culto</button>
+                                <button onClick={handlePrevious} className="bg-gray-600 hover:bg-gray-500 px-4 py-2 rounded-lg disabled:opacity-50" disabled={currentItemIndex === 0}>Anterior</button>
+                                <button onClick={handleToggleTimer} className={`px-6 py-2 rounded-lg flex items-center gap-2 text-lg ${isRunning ? 'bg-yellow-500' : 'bg-green-500'}`}>
+                                    {isRunning ? <icons.Pause size={20}/> : <icons.Play size={20}/>}
+                                    {isRunning ? 'Pausar' : 'Iniciar'}
+                                </button>
+                                <button onClick={handleResetTimer} className="bg-gray-600 hover:bg-gray-500 px-4 py-2 rounded-lg flex items-center gap-2"><icons.RotateCcw size={18}/> Reset</button>
+                                <button onClick={handleNext} className="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded-lg disabled:opacity-50" disabled={currentItemIndex >= items.length - 1}>Próximo</button>
+                                <button onClick={onStopLive} className="bg-red-600 hover:bg-red-700 px-4 py-2 rounded-lg">Encerrar</button>
                             </div>
                         )}
                     </div>
