--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
     <script type="text/babel">
         const { useState, useEffect, useCallback, useMemo } = React;
 
-        // --- ÍCONES EMBUTIDOS COMO COMPONENTES SVG ---
         const SvgIcon = ({ size = 24, className = '', children }) => (
           <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}>{children}</svg>
         );
@@ -207,7 +206,7 @@
                             isRunning: false,
                             currentTime: 0,
                             actualStartTime: null,
-                            lastSyncTimestamp: firestore.serverTimestamp() // Ponto de referência inicial
+                            lastSyncTimestamp: firestore.serverTimestamp()
                         }
                     };
                     try {
@@ -557,12 +556,12 @@
                     interval = setInterval(() => {
                         const elapsedSeconds = Math.floor((Date.now() - lastSync) / 1000);
                         setDisplayTime(savedTime + elapsedSeconds);
-                    }, 1000);
+                    }, 250); // Intervalo mais rápido para display
                 } else if (liveState.isLive) {
                     setDisplayTime(liveState.data.liveState.currentTime || 0);
                 }
                 return () => clearInterval(interval);
-            }, [liveState.isLive, liveState.data?.liveState.isRunning, liveState.data?.liveState.currentTime, liveState.data?.liveState.lastSyncTimestamp]);
+            }, [liveState]);
 
             if (!liveState.isLive || !liveState.data) {
                 return (
@@ -616,6 +615,11 @@
                 updateDoc(liveDocRef, payload);
             };
 
+            const handleFullDataUpdate = (newLiveData) => {
+                if (role !== 'coordinator' || !liveDocRef) return;
+                window.firestore.setDoc(liveDocRef, { isLive: true, data: newLiveData });
+            };
+
             const handleToggleTimer = () => {
                 const newIsRunning = !isRunning;
                 const updates = { isRunning: newIsRunning, currentTime: displayTime, lastSyncTimestamp: serverTimestamp() };
@@ -634,17 +638,23 @@
                 const newItems = items.map((item, index) => 
                     index === currentItemIndex ? { ...item, completed: true, actualDuration: displayTime } : item
                 );
-                const newLiveData = {
-                    ...liveState.data,
+                handleFullDataUpdate({ 
+                    ...liveState.data, 
                     items: newItems,
                     liveState: { ...dataLiveState, currentItemIndex: currentItemIndex + 1, currentTime: 0, isRunning: true, lastSyncTimestamp: serverTimestamp() }
-                };
-                window.firestore.setDoc(liveDocRef, { isLive: true, data: newLiveData });
+                });
             };
 
             const handlePrevious = () => {
                 if (currentItemIndex <= 0) return;
-                handleLiveUpdate({ currentItemIndex: currentItemIndex - 1, currentTime: 0, lastSyncTimestamp: serverTimestamp() });
+                const newItems = items.map((item, index) => 
+                    index === currentItemIndex - 1 ? { ...item, completed: false, actualDuration: null } : item
+                );
+                handleFullDataUpdate({
+                    ...liveState.data,
+                    items: newItems,
+                    liveState: { ...dataLiveState, currentItemIndex: currentItemIndex - 1, currentTime: 0, lastSyncTimestamp: serverTimestamp() }
+                });
             };
             
             if (!currentItem) {
