--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <script type="text/babel">
         const { useState, useEffect, useCallback, useMemo } = React;
 
+        // --- ÍCONES EMBUTIDOS COMO COMPONENTES SVG ---
         const SvgIcon = ({ size = 24, className = '', children }) => (
           <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}>{children}</svg>
         );
@@ -556,7 +557,7 @@
                     interval = setInterval(() => {
                         const elapsedSeconds = Math.floor((Date.now() - lastSync) / 1000);
                         setDisplayTime(savedTime + elapsedSeconds);
-                    }, 250); // Intervalo mais rápido para display
+                    }, 250);
                 } else if (liveState.isLive) {
                     setDisplayTime(liveState.data.liveState.currentTime || 0);
                 }
