--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         import { getFirestore, doc, getDoc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         
         const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {
-            apiKey: "AIzaSyCYaOPtQdD1hU29awdgeN-rEGaoLGBGYBM", // Substitua se não estiver no ambiente Canvas
-            authDomain: "gestao-de-culto.firebaseapp.com",
-            projectId: "gestao-de-culto",
-            storageBucket: "gestao-de-culto.firebasestorage.app",
-            messagingSenderId: "843566675046",
-            appId: "1:843566675046:web:cc1e54a813827f4502a9a7"
+            apiKey: "SUA_API_KEY", // Substitua se não estiver no ambiente Canvas
+            authDomain: "SEU_AUTH_DOMAIN",
+            projectId: "SEU_PROJECT_ID",
+            storageBucket: "SEU_STORAGE_BUCKET",
+            messagingSenderId: "SEU_MESSAGING_SENDER_ID",
+            appId: "SEU_APP_ID"
         };
 
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'worship-planner-default';
